--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: gaoyang23nj
-logo: /assets/img/nobla.png
-description: Personal pages of gaoyang23nj.
+logo: 
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
