--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: gaoyang23nj
 logo: 
-description: 
+description: 感受世界之美好
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
