--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: gaoyang23nj
+title: Yang Gao's Homepage
 logo: 
-description: 感受世界之美好
+description: 高扬的个人主页
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
